--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
   </article>
 
-  <hr>
+  <hr style="width:30%">
 
   <article>
     <section class="aboutMe">
-      <h3>About Me!</h3>
-      <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I could play with a teaching language called Logo.</p>
+      <h2>About Me!</h2>
+      <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I could play with a teaching language called <a href="https://en.wikipedia.org/wiki/Logo_(programming_language)">Logo</a>.</p>
       <p> Despite my job as a lead software engineer, I actually went to school to study English! At the time I wanted to be an English professor. When I realized it wasn't what I wanted, I was able to use my self-taught knowledge to acquire a job programming.</p>
-      <p> Since then, I've gained a lot of experience programming, and taken a boot camp program at <a href="https://www.thinkful.com/">Thinkful</a> to fill in some of the knowledge I'd have otherwise picked up in college.</p>
-      <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, and have a black belt in karate and a brown belt in judo.</p>
+      <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers, and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill in some of the knowledge I'd have otherwise picked up in college.</p>
+      <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a brown belt in judo.</p>
     </section>
     
 
   </article>
 
-<hr>
+<hr style="width:30%">
   
   <section class="contact">
     <p>Itching for more of me? Contact me or check me out at:</p>
@@ -54,7 +54,7 @@
   </section>
 
   <footer>
-    Copyright Shaun Kirk
+    &copy; Shaun Kirk
   </footer>
   <script src="script.js"></script>
 </body>
