--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Shaun Kirk's Portfolio</title>
-  <br>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -14,8 +13,10 @@
 <body>
   <section class="nameTitle">
     <header>
-      <a href="index.html" class=nameTitle><h1>Shaun Kirk</h1></a>
+      <a href="index.html" class="nameTitle" style="text-decoration: none;"><h1>Shaun Kirk</h1></a>
+      <br>
       <img src="images/placeholder.jpg" width=50% alt="Shaun Kirk">
+      <br>
       <h3>Lead Software Developer</h3>
     </header>
     </section>
