--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<!-- HEAD ------------------->
 
 <head>
   <meta charset="utf-8">
@@ -10,53 +12,81 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- BODY ------------------->
+
 <body>
   <section class="nameTitle">
     <header>
-      <a href="index.html" class="nameTitle" style="text-decoration: none;"><h1>Shaun Kirk</h1></a>
+      <!-- Name / Image / Title ------------------->
+      <a href="index.html" style="text-decoration: none;">
+        <h1>Shaun Kirk</h1>
+      </a>
       <br>
-      <img src="images/placeholder.jpg" width=50% alt="Shaun Kirk">
+      <img src="images/placeholder.jpg" width=200px alt="Shaun Kirk">
       <br>
       <h3>Lead Software Developer</h3>
     </header>
+  </section>
+  <!-- Description ------------------->
+  <div>
+    <section>
+      <article class="description">
+        <p>Hi! I'm Shaun, a lead software developer living in Cambridge, MA. I work on Electronic Health Record software
+          for
+          hospitals.</p>
+        <ul>
+          <li>15 years' experience in the health technology sector</li>
+          <li>Extensive programming experience</li>
+          <li>Software development, testing, and leadership</li>
+        </ul>
     </section>
-    <article class="description">
-    <p>Hi! I'm a lead software developer living in Cambridge, MA. I work on Electronic Health Record software for hospitals.</p>
+  </div>
+
+  <!-- About Me! section ------------------->
 
 
   </article>
 
-  <hr style="width:30%">
+  <hr style="width:30%"> <!-- line ------------------->
 
   <article>
     <section class="aboutMe">
-      <h2>About Me!</h2>
-      <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I could play with a teaching language called <a href="https://en.wikipedia.org/wiki/Logo_(programming_language)">Logo</a>.</p>
-      <p> Despite my job as a lead software engineer, I actually went to school to study English! At the time I wanted to be an English professor. When I realized it wasn't what I wanted, I was able to use my self-taught knowledge to acquire a job programming.</p>
-      <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers, and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill in some of the knowledge I'd have otherwise picked up in college.</p>
-      <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a brown belt in judo.</p>
+      <h2 style="text-align: center;">About Me!</h2>
+      <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I
+        could play with a teaching language called <a
+          href="https://en.wikipedia.org/wiki/Logo_(programming_language)">Logo</a>.</p>
+      <p> Despite my job as a lead software engineer, I actually went to school to study English! At the time I wanted
+        to be an English professor. When I realized it wasn't what I wanted, I was able to use my self-taught knowledge
+        to acquire a job programming.</p>
+      <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers,
+        and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill
+        in some of the knowledge I'd have otherwise picked up in college.</p>
+      <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a
+        brown belt in judo.</p>
     </section>
-    
-
   </article>
 
-<hr style="width:30%">
-  
+  <hr style="width:30%"> <!-- line ------------------->
+
+  <!-- Contact ------------------->
   <section class="contact">
+    <h3 style="text-align: center">Contact</h3>
     <p>Itching for more of me? Contact me or check me out at:</p>
 
-    <ul>
+    <ol>
       <li>
         <a href="https://www.linkedin.com/in/shaun-kirk-324b63b/">Linkedin</a>
       </li>
       <li>
         <a href="https://github.com/shakeableabyss">Github</a>
       </li>
-    </ul>
+    </ol>
   </section>
 
+
+  <!-- FOOTER ------------------->
   <footer>
-    &copy; Shaun Kirk
+    &copy; Shaun Kirk <!-- Copyright comment ------------------->
   </footer>
   <script src="script.js"></script>
 </body>
