--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- HEAD ------------------->
+<!-- HEAD -->
 
 <head>
   <meta charset="utf-8">
@@ -12,22 +12,22 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<!-- BODY ------------------->
+<!-- BODY -->
 
 <body>
   <section class="nameTitle">
     <header>
-      <!-- Name / Image / Title ------------------->
+      <!-- Name / Image / Title -->
       <a href="index.html" style="text-decoration: none;">
         <h1>Shaun Kirk</h1>
       </a>
       <br>
-      <img src="images/placeholder.jpg" width=200px alt="Shaun Kirk">
+      <img src="images/placeholder.jpg" width=200 alt="Shaun Kirk">
       <br>
       <h3>Lead Software Developer</h3>
     </header>
   </section>
-  <!-- Description ------------------->
+  <!-- Description -->
   <div>
     <section>
       <article class="description">
@@ -39,18 +39,18 @@
           <li>Extensive programming experience</li>
           <li>Software development, testing, and leadership</li>
         </ul>
+      </article>
     </section>
   </div>
 
-  <!-- About Me! section ------------------->
+  <!-- About Me! section -->
 
 
-  </article>
+  <hr style="width:30%"> <!-- line -->
 
-  <hr style="width:30%"> <!-- line ------------------->
 
-  <article>
-    <section class="aboutMe">
+  <section class="aboutMe">
+    <article>
       <h2 style="text-align: center;">About Me!</h2>
       <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I
         could play with a teaching language called <a
@@ -63,12 +63,13 @@
         in some of the knowledge I'd have otherwise picked up in college.</p>
       <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a
         brown belt in judo.</p>
-    </section>
-  </article>
+    </article>
+  </section>
 
-  <hr style="width:30%"> <!-- line ------------------->
 
-  <!-- Contact ------------------->
+  <hr style="width:30%"> <!-- line-->
+
+  <!-- Contact -->
   <section class="contact">
     <h3 style="text-align: center">Contact</h3>
     <p>Itching for more of me? Contact me or check me out at:</p>
@@ -84,9 +85,9 @@
   </section>
 
 
-  <!-- FOOTER ------------------->
+  <!-- FOOTER -->
   <footer>
-    &copy; Shaun Kirk <!-- Copyright comment ------------------->
+    &copy; Shaun Kirk <!-- Copyright comment -->
   </footer>
   <script src="script.js"></script>
 </body>
