--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <!-- HEAD -->
-
+<!-- contains all the basic information to get things working -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Shaun Kirk's Portfolio</title>
+  <!-- normalize.css will help maintain consistency across browsers -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css"/>
+  <!-- link my stylesheet style.css to this web page to control styling -->
   <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
@@ -19,21 +21,24 @@
     <header>
       <!-- Name / Image / Title -->
       <a href="index.html" style="text-decoration: none;">
-        <h1>Shaun Kirk</h1>
+        <h1>Shaun Kirk</h1> <!-- Me -->
       </a>
       <br>
-      <img src="images/placeholder.jpg" width=200 alt="Shaun Kirk">
+      <img src="images/placeholder.jpg" width=200 alt="Shaun Kirk"> <!-- a picture -->
       <br>
-      <h3>Lead Software Developer</h3>
+      <h3>Lead Software Developer</h3> <!-- my current job title -->
     </header>
   </section>
   <!-- Description -->
   <div>
     <section>
       <article class="description">
-        <p>Hi! I'm Shaun, a lead software developer living in Cambridge, MA. I work on Electronic Health Record software
+        <!-- A brief greeting and description -->
+        <h4>Hi!</h4>
+        <p>I'm Shaun, a lead software developer living in Cambridge, MA. I work on Electronic Health Record software
           for
           hospitals.</p>
+        <!-- unordered list of positive factoids about me-->
         <ul>
           <li>15 years' experience in the health technology sector</li>
           <li>Extensive programming experience</li>
@@ -43,37 +48,41 @@
     </section>
   </div>
 
+  <hr style="width:30%"> <!-- horizontal line -->
+
   <!-- About Me! section -->
-
-
-  <hr style="width:30%"> <!-- line -->
-
-
+  
   <section class="aboutMe">
     <article>
+      <!-- a few paragraphs about myself, including my desire to
+           work with others and some words about my personal life and hobbies-->
       <h2 style="text-align: center;">About Me!</h2>
+      <!-- my background -->
       <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I
         could play with a teaching language called <a
           href="https://en.wikipedia.org/wiki/Logo_(programming_language)">Logo</a>.</p>
       <p> Despite my job as a lead software engineer, I actually went to school to study English! At the time I wanted
         to be an English professor. When I realized it wasn't what I wanted, I was able to use my self-taught knowledge
         to acquire a job programming.</p>
+      <!-- state that I enjoy working with people -->
       <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers,
         and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill
         in some of the knowledge I'd have otherwise picked up in college.</p>
+      <!-- info about my hobbies --> 
       <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a
         brown belt in judo.</p>
     </article>
   </section>
 
 
-  <hr style="width:30%"> <!-- line-->
+  <hr style="width:30%"> <!-- horizontal line-->
 
   <!-- Contact -->
   <section class="contact">
+    <!-- a section containing my contact information -->
     <h3 style="text-align: center">Contact</h3>
     <p>Itching for more of me? Contact me or check me out at:</p>
-
+    <!-- an ordered list of linked webpages with more info -->
     <ol>
       <li>
         <a href="https://www.linkedin.com/in/shaun-kirk-324b63b/">Linkedin</a>
@@ -87,7 +96,8 @@
 
   <!-- FOOTER -->
   <footer>
-    &copy; Shaun Kirk <!-- Copyright comment -->
+    <!-- the bottom of the page -->
+    &copy; Shaun Kirk <!-- Copyright comment in case someone tries to steal my content -->
   </footer>
   <script src="script.js"></script>
 </body>
