--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <!-- HEAD -->
 <!-- contains all the basic information to get things working -->
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Shaun Kirk's Portfolio</title>
   <!-- normalize.css will help maintain consistency across browsers -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
-    type="text/css"/>
+    type="text/css">
   <!-- link my stylesheet style.css to this web page to control styling -->
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <!-- BODY -->
@@ -30,8 +31,8 @@
     </header>
   </section>
   <!-- Description -->
-  <div>
-    <section>
+  <section>
+    <div>
       <article class="description">
         <!-- A brief greeting and description -->
         <h4>Hi!</h4>
@@ -45,13 +46,13 @@
           <li>Software development, testing, and leadership</li>
         </ul>
       </article>
-    </section>
-  </div>
+    </div>
+  </section>
 
   <hr style="width:30%"> <!-- horizontal line -->
 
   <!-- About Me! section -->
-  
+
   <section class="aboutMe">
     <article>
       <!-- a few paragraphs about myself, including my desire to
@@ -68,7 +69,7 @@
       <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers,
         and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill
         in some of the knowledge I'd have otherwise picked up in college.</p>
-      <!-- info about my hobbies --> 
+      <!-- info about my hobbies -->
       <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a
         brown belt in judo.</p>
     </article>
