--- a/index.html
+++ b/index.html
@@ -51,28 +51,25 @@
 
   <!-- About Me! section -->
 
-  <section class="aboutMe">
+  <article class="aboutMe">
     <h2 style="text-align: center;">About Me!</h2>
-    <article>
-      <!-- a few paragraphs about myself, including my desire to
+    <!-- a few paragraphs about myself, including my desire to
            work with others and some words about my personal life and hobbies-->
-      <!-- my background -->
-      <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I
-        could play with a teaching language called <a
-          href="https://en.wikipedia.org/wiki/Logo_(programming_language)">Logo</a>.</p>
-      <p> Despite my job as a lead software engineer, I actually went to school to study English! At the time I wanted
-        to be an English professor. When I realized it wasn't what I wanted, I was able to use my self-taught knowledge
-        to acquire a job programming.</p>
-      <!-- state that I enjoy working with people -->
-      <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers,
-        and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill
-        in some of the knowledge I'd have otherwise picked up in college.</p>
-      <!-- info about my hobbies -->
-      <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a
-        brown belt in judo.</p>
-    </article>
-  </section>
-
+    <!-- my background -->
+    <p> My interest in programming began back in elementary school, when I would sometimes stay in for recess so I
+      could play with a teaching language called <a
+        href="https://en.wikipedia.org/wiki/Logo_(programming_language)">Logo</a>.</p>
+    <p> Despite my job as a lead software engineer, I actually went to school to study English! At the time I wanted
+      to be an English professor. When I realized it wasn't what I wanted, I was able to use my self-taught knowledge
+      to acquire a job programming.</p>
+    <!-- state that I enjoy working with people -->
+    <p> Since then, I've gained a lot of experience programming and working with a great team of developers, testers,
+      and designers! I've also taken a boot camp program from <a href="https://www.thinkful.com/">Thinkful</a> to fill
+      in some of the knowledge I'd have otherwise picked up in college.</p>
+    <!-- info about my hobbies -->
+    <p> Besides my job, I have lots of hobbies--I write, play guitar and bass, draw, have a black belt in karate and a
+      brown belt in judo.</p>
+  </article>
 
   <hr style="width:30%"> <!-- horizontal line-->
 
